Fix z-index glitch

--- a/src/components/Modal/window.css
+++ b/src/components/Modal/window.css
@@ -3,7 +3,6 @@
     background-color: #202020;
     width: 600px;
     height: 60%;
-    z-index: 999999;
     color: white;
     border-radius:20px ;
     box-shadow: rgba(0, 0, 0, 0.714) 0px 48px 100px 0px;
