--- a/src/components/layout/Header/Modalall.css
+++ b/src/components/layout/Header/Modalall.css
@@ -9,6 +9,7 @@
     border-radius: 10px;
     padding: 5px;
     z-index: 999999999999999;
+    position: absolute;
 }
 
 @media screen and (max-width: 450px) {
@@ -48,6 +49,7 @@
     overflow: hidden;
     border-radius: 10px;
     z-index: 999999999999999;
+    position: absolute;
 }
 @media screen and (max-width: 450px) {
     .Modal-date {
@@ -65,7 +67,8 @@
     border-radius: 10px;
     color: black;
     background-color: white;
-    z-index: 999999999999999;
+    z-index: 999;
+    position: absolute;
 }
 @media screen and (max-width: 300px) {
     .Modal-setting {
