--- a/src/components/layout/Windows/window.css
+++ b/src/components/layout/Windows/window.css
@@ -3,5 +3,5 @@
     line-height: 1.5;
 }
 .currentwindow {
-    z-index: 99999999999999;
+    z-index: 99;
 }
